deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: ghcr.io/bal-gopal/infrastructure:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ghcr
      template:
        spec:
          imagePullSecrets:
          - name: ghcr
